[TRAVIS] Attempt to make version file get created

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
             - sshpass
 script: npm -v
 after_success:
-- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && cat $TRAVIS_COMMIT > version.txt
+- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && echo $TRAVIS_COMMIT > version.txt
 - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && mkdir out
 - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && mv * out
 - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && tar -czf build.tgz out
